chore:tada: move styles to css file

--- a/src/App.css
+++ b/src/App.css
@@ -92,3 +92,44 @@
 .Result-container > .App-header {
   margin-top: -68px;
 }
+
+.Oppai-container {
+  background-color: rgba(206, 60, 66, 0.3);
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.Oppai-container > video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: scaleX(-1);
+  z-index: 1;
+}
+
+.Oppai-container > .near {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(206, 60, 66, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 5;
+  animation: flash 1s infinite;
+}
+
+@keyframes flash {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
